data/derived/fa15/progs/unify/prog0495.ml.out
Characters 76-80:
  let fixpoint (f,b) = wwhile ((let f' b = if (f b) = b then b else f b in f' (f )b),b);;
                                                                              ^^^^
Error: This expression has type ('a -> 'b) -> 'a -> 'b
       but an expression was expected of type 'a -> 'b
       The type variable 'a occurs inside 'a -> 'b
